Added CNAME, updated mailadres

--- a/index.html
+++ b/index.html
@@ -17,12 +17,42 @@ layout: default
 
   <div class="buttonswrapper">
     <div class="circle-wrapper">
-      <div class="col"><div class="circle-1 circle" id="advice"><h2>Adviseren</h2></div></div>
-      <div class="col"><div class="circle-2 circle" id="coaching"><h2>Coachen</h2></div></div>
-      <div class="col"><div class="circle-3 circle" id="counseling"><h2>Counselen</h2></div></div>
-      <div class="col"><div class="circle-4 circle" id="training"><h2>Trainen</h2></div></div>
-      <div class="col"><div class="circle-5 circle" id="spreken"><h2>Spreken</h2></div></div>
-      <div class="col"><div class="circle-6 circle" id="mensbeeld"><h2>Mensbeeld</h2></div></div>
+      <div class="col">
+        <div class="circle-1 circle" id="advice">
+          <h2>Adviseren</h2>
+          <p>Goede raad helpt om te kiezen</p>
+        </div>
+      </div>
+      <div class="col">
+        <div class="circle-2 circle" id="coaching">
+          <h2>Coachen</h2>
+          <p>Van hier naar daar</p>
+        </div>
+      </div>
+      <div class="col">
+        <a href="/diensten/"></a>
+          <div class="circle-3 circle" id="counseling">
+            <h2>Counselen</h2>
+            <p>De weg naar herstel</p>
+          </div>
+      </div>
+      <div class="col">
+        <div class="circle-4 circle" id="training">
+          <h2>Trainen</h2>
+          <p>De weg van verandering</p>
+        </div>
+      </div>
+      <div class="col">
+        <div class="circle-5 circle" id="spreken">
+          <h2>Spreken</h2>
+          <p>Overdracht voor groei</p>
+        </div>
+      </div>
+      <div class="col">
+        <div class="circle-6 circle" id="mensbeeld">
+          <h2>Mensbeeld</h2>
+        </div>
+      </div>
     </div>
     <div class="overlay">
       <div class="x"></div>
