--- a/index.html
+++ b/index.html
@@ -6,14 +6,28 @@ layout: default
 
   <img class="photo" src="assets/img/photo_kees.jpg" alt="Kees Neven" >
 
-  <p>Hallo, ik ben Kees Neven en mijn missie is om mensen op weg te helpen naar hun toekomst.</p>
+  <p>
+    Hallo, mijn naam is Kees Neven en mijn missie is mensen op weg te helpen naar hun toekomst.
+  </p>
 
-  <p>Ik geloof dat mensen gemaakt zijn om te groeien en te leren. Zij kunnen een leven lang ontwikkelen en veranderen als zij dit willen. 
-  Ik wil hen helpen met de kennis en de vaardigheden die ik zelf heb mogen ontdekken. Ik begeleid mensen graag persoonlijk in hun ontwikkeling naar hun droom, bestemming of doel, maar ik hou ook van het werken met groepen.</p>
+  <p>
+    Mijn overtuiging is dat mensen gemaakt zijn om te groeien en te leren. 
+    Zij kunnen een leven lang professioneel en persoonlijk ontwikkeling als zij dit willen. 
+    Graag help ik mensen op weg om hun dromen en plannen te realiseren of te ondersteunen als er hindernissen en belemmeringen.
+    Mensen mensen die hun leven willen veranderen om een roeping of droom te volgen, of zoeken naar zingeving, waarde en diepgang zijn welkom.
+    Levenservaring vanuit christelijk perspectief en professie gebruik ik om jou te helpen op zoek te gaan naar de mogelijkheden.  
+  </p>
+  
+  <p>  
+    In de samenleving gaan de veranderingen soms heel snel en voorde het weet heb je voor je gevoel de boot gemist. Soms valt het niet mee om weer een nieuw perspectief te vinden bij een verlies van geliefde of een baan, ook een verhuizing of een nieuwe levensfase kan veel problemen geven, zowel persoonlijk als in de relatie met de ander.
+    Mensen die zich kwetsbaar voelen of in een kwetsbare situatie zitten kunnen bij mij terecht 
+    Mensen die persoonlijk of professioneel vastgelopen zijn en de knoop in hun leven willen ontwarren zodat ze verder kunnen wil ik graag helpen.
+  </p>
 
-  <p>Ik heb een voorkeur voor mensen die zich kwetsbaar voelen of in een kwetsbare situatie zitten.
-  In de samenleving gaan de veranderingen soms heel snel en soms valt het niet mee om weer een nieuw perspectief te vinden bij een verlies van geliefde of een baan, ook een verhuizing of een nieuwe levensfase kan veel problemen zowel persoonlijk als in de relatie met de ander.
-  Mensen die vastgelopen zijn en de knoop in hun leven willen ontwarren zodat ze verder kunnen wil ik graag helpen vanuit christelijke perspectief.  Dit kan door advisering, counseling, coaching of training.</p>
+  <p>
+    Ik werk vanuit professioneel kader met een geïntegreerde visie waarin zingeving, relaties, levensbeschouwing, professionaliteit en persoonlijkheid een plaats krijgen. Ik begeleid mensen graag persoonlijk in hun ontwikkeling naar hun droom, bestemming of doel, maar ik hou ook van het werken met groepen. Dit alles kan door advisering, counseling, coaching of training.
+  </p>
+
 
   <div class="buttonswrapper">
     <div class="circle-wrapper">
@@ -55,7 +69,13 @@ layout: default
       </div>
     </div>
     <div class="overlay">
-      <div class="x"></div>
+      <div class="x">
+        <svg xmlnss="http://www.w3.org/2000/svg" width="30" height="30">
+          <line stroke-linecap="round" x1="5" y1="5" x2="25" y2="25" stroke="black" stroke-width="2" />
+          <line stroke-linecap="round" x1="5" y1="25" x2="25" y2="5" stroke="black" stroke-width="2" />
+          
+        </svg>
+      </div>
       <div class="block1 textblock" id="advice">
         <div class="textwrapper">
           <h1>Adviseren</h1>
