added more pages

--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@ layout: default
       </div>
       <div class="col">
         <div class="circle-6 circle" id="mensbeeld">
-          <h2>Mensbeeld</h2>
+          <h2>E-Coaching</h2>
+          <p>(In ontwikkeling)</p>
         </div>
       </div>
     </div>
@@ -80,13 +81,19 @@ layout: default
         <div class="textwrapper">
           <h1>Adviseren</h1>
           <p>
-            <strong>De goede raad van een adviseur helpt jou om het juiste pad te kiezen.</strong>
-            Een droom of opdracht verwezenlijken kan vaak op meerdere manieren.
-            Een doel kan vaak op verschillende manieren bereikt worden.
+            De goede raad van een adviseur helpt jou om het juiste pad te kiezen.
+            Een droom, missie of opdracht verwezenlijken kan vaak op verschillende manieren.
+            Een doel kan vaak via verschillende routes bereikt worden. 
             Een verandering kan op meerdere manieren in beweging gezet worden.
             Een probleem kan vaak op verschillende manieren opgelost worden.
+          </p>
+
+          <p>
             Een goed advies leidt naar een succesvol plan met meer kans van slagen.
             Een advies om op de juiste manier om te gaan met onomkeerbare zaken zoals een ingrijpend verlies is ook een vorm van adviseren.
+          </p>
+          <p>
+            <a href={{ "/diensten/advies/" | prepend: site.url }}>Meer informatie over advies</a>
           </p>
         </div>
       </div>
@@ -94,13 +101,20 @@ layout: default
         <div class="textwrapper">
           <h1>Coachen</h1>
           <p>
-            <strong>Een goede coacht helpt jou om van de plaats waar je bent naar de plaats waar je wilt zijn te komen.</strong>
-            Coaching is: Motivatie op gang brengen om te veranderen en de ander helpen te komen waar hij wil zijn.
-            Samen sta je sterk. Twee weten meer dan een. Iedereen heeft bevestiging en aanmoedig nodig, Dit zien we in de topsport. Wat in de sportwereld geldt, werkt ook bij het bereiken van andere doelen. We hebben nodig dat iemand ons zelf laat ontdekken waar we goed in zijn, wat we goed kunnen en wat we belangrijk vinden.
+            <strong>Een goede coacht helpt jou om van de plaats waar je nu bent te komen op de plaats waar je wilt zijn.</strong>
+          </p> 
+
+          <p>
+            Coaching is motivatie op gang brengen om te veranderen en jou te helpen om te komen je wil zijn. Dit kan een ideaal, een droom, doel of bestemming zijn.
+            Samen sta je sterken twee weten meer dan een. Iedereen heeft bevestiging en aanmoedig nodig en dit geldt zeker als je iets wilt bereiken of veranderen. Dit zien we in de topsport en dat geld ook bij het bereiken van andere doelen. We hebben als mens iemand nodig die ons zelf laat ontdekken waar we goed in zijn, wat we goed kunnen en wat we belangrijk vinden.
           </p>
-          
+
           <p>
             Soms is coaching ook nodig om moeilijkheden te overwinnen. De problemen waar we mee te maken krijgen worden complexer van aard in de huidige tijd. Een goede coach helpt je optimaal om goed door de problemen heen te komen of om een goede weg te vinden om er mee om te gaan.
+          </p>
+
+          <p>
+            <a href={{ "/diensten/coaching/" | prepend: site.url }}>Meer informatie over coaching</a>
           </p>
         </div>
       </div>
@@ -109,6 +123,8 @@ layout: default
           <h1>Counselen</h1>
           <p>
             <strong>Een goede counselor helpt je om jezelf weer terug te vinden bij ingrijpende gebeurtenissen.</strong>
+          </p>
+          <p>
             Het kan zomaar gebeuren dat je in de knoop raakt met jezelf, met een ander of een Ander. Het kan zijn dat je beschadigd bent geraakt, mentaal of geestelijk. Belangrijke levensgebeurtenissen als bijvoorbeeld geboorten of sterfgevallen, trouwen of scheiden, ander werk of verhuizen, ziekte of werkeloosheid kunnen je danig uit je evenwicht brengen.
             Zoals de coach kan helpen om de knoop te ontwarren,  zo kan de counselor helpen om zelf tot herstel te komen. Herstelprocessen kunnen kort zijn maar ook lang duren, afhankelijk hoe de verstoringen of beschadigingen zijn ontstaan en welke impact ze hebben gehad. De counselor helpt om tot herstel en genezing te komen of om te aanvaarden wat onveranderbaar is.
           </p>
@@ -120,9 +136,16 @@ layout: default
           <h1>Trainen</h1>
           <p>
             <strong>Een goede trainer leert jou hoe jij kunt veranderen</strong>
-            Als je iets wilt bereiken heb je daar kennis, ervaring en skills voor nodig. Trainingen kunnen  je nieuwe inzichten geven, je nieuwe houdingen en vaardigheden leren gebruiken en toe te passen.
-            Trainingen kunnen over allerlei onderwerpen gaan, het kan individueel en in groepsverband. het kan persoonlijk of teamgericht zijn. Niets gaat vanzelf, maar je kunt bijna alles leren.
           </p>
+          <p>
+            Als je iets wilt bereiken heb je daar kennis, ervaring en skills voor nodig. Trainingen kunnen jou nieuwe inzichten geven en je nieuwe houdingen en vaardigheden leren gebruiken en toe te passen.
+          </p>
+          <p>
+            Trainingen kunnen over allerlei onderwerpen gaan en zowel individueel als in groepsverband gegeven worden. Het kan persoonlijk of teamgericht zijn. Niets gaat vanzelf, maar bijna alles is te leren.
+          </p>
+          <p>
+            <a href={{ "/diensten/training/" | prepend: site.url }}>Meer over training</a>
+            </p>
         </div>
       </div>
 
@@ -130,21 +153,42 @@ layout: default
         <div class="textwrapper">
           <h1>Spreken</h1>
           <p>
-            <strong>Een goede spreker neemt zijn gehoor mee naar een nieuw gebied.</strong>
-            De oudste vorm van communiceren en informatieoverdracht is waarschijnlijk spreken. een spreker kan een groep in een keer informatie geven, kennis overdragen of onderhouden.
+            <strong>Een goede spreker neemt zijn luisteraars mee naar een nieuw gebied.</strong>
+          </p>
+          <p>
+            De oudste vorm van communiceren en informatieoverdracht is waarschijnlijk spreken. Een spreker kan een groep in een keer informatie geven, kennis overdragen of onderhouden.
+          </p>
+
+          <p>
             Een spreker voor een groep kan het doel hebben om je motiveren om iets van waarde te koesteren of juist tot verandering te brengen. Hij kan ook nieuwe inzichten en kennis overbrengen en uitleggen die bruikbaar is voor deze groep. Een spreker kan de groep helpen om te groeien en te ontwikkelen.
+          </p>
+
+          <p>
+            <a href={{ "/diensten/spreken/" | prepend: site.url }}>Meer over spreken</a>
           </p>
         </div>
       </div>
       <div class="block6 textblock" id="mensbeeld">
         <div class="textwrapper">
-          <h1>Mensbeeld</h1>
+          <h1>E-Coaching</h1>
+            <p>
+              <strong>Een goede coach helpt jou om van de plaats waar je nu bent te komen op de plaats waar je wilt zijn.</strong> 
+            </p>
+
+            <p>
+              <strong>Een E-Coach doet dit op afstand en maakt gebruik van de elektronische digitale mogelijkheden van deze tijd.</strong>
+            </p>
+
+            <p>
+              E coachen via Email of Skype is een alternatief als afstand een obstakel, tijd een beperkende factor en agenda ruimte een belemmering is.
+              Een persoonlijke ontmoeting met de coach heeft altijd voorkeur en E-Coachen is een goed alternatief en ook geschikt voor de meeste coach onderwerpen.
+            </p>
+            
+            <p>
+              Het heeft wel de voorkeur om de coach een keer in levende lijve te ontmoeten om het coachen via Skype effectiever te maken
+            </p>
           <p>
-            Wij geloven dat ieder mens uniek is en een unieke eigenschappen heeft, welk optimaal tot zijn recht komen in het samenleven met anderen. Wij geloven dat mensen levenslang kunnen ontwikkelen en een omgeving waar dit gestimuleerd en gecorrigeerd wordt.
-            Wij geloven dat mensen het vermogen hebben gekregen om opnieuw te beginnen als er iets afgebroken wordt in hun leven. In mensenlevens vind helaas regelmatig een verlieservaring plaats……
-          </p>
-          <p>
-            <a href="/Visie/">Meer</a>
+            <a href={{ "/diensten/e-coaching" | prepend: site.url }}>Lees meer over coaching</a>
           </p>
         </div>
       </div>
