removing baseurl references

--- a/contact.html
+++ b/contact.html
@@ -3,23 +3,48 @@ layout: page
 title: Contact
 permalink: /contact/
 ---
+
+<form class="contact" id="contact-form" action="//forms.brace.io/you@email.com">
+	<div>
+	    <input type="text" name="name" placeholder="Naam">
+	</div>
+
+	<div>
+		<input type="email" name="_replyto" placeholder="Mailadres">
+	</div>
+
+	<div>
+		<textarea name="message" placeholder="Uw bericht"></textarea>
+	</div>
+
+	<div>
+	    <input type="submit" value="Verstuur">
+	</div>
+</form>
+
+
+
+<!-- 
+
 <form class="contact-form" id="contact-form" action="mailto:gerbyzation@me.com">
 	<div>
 		<label for="name">Naam:</label>
 		<br>
-		<input type="text" name="name" id="input-name" required>		
+		<input type="text" name="name" id="input-name" placeholder="Naam" required>		
 	</div>
 
 	<div>
 		<label for="email">Mailadres:</label>
 		<br>
-		<input type="email" name="email" id="input-mail" required>
+		<input type="email" name="email" id="input-mail" placeholder="Mailadres" required>
 	</div>
 
 	<div>
 		<label for="message">Bericht:</label><br>
-		<textarea name="message" id="input-message"required></textarea>
+		<textarea name="message" id="input-message" placeholder="Uw bericht" required></textarea>
 	</div>
 	<button form="contact-form">Verstuur</button>
 	
-</form>
+</form> 
+
+-->
