--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@ layout: default
   <p>
     Mijn overtuiging is dat mensen gemaakt zijn om te groeien en te leren. 
     Zij kunnen een leven lang professioneel en persoonlijk ontwikkeling als zij dit willen. 
-    Graag help ik mensen op weg om hun dromen en plannen te realiseren of te ondersteunen als er hindernissen en belemmeringen.
-    Mensen mensen die hun leven willen veranderen om een roeping of droom te volgen, of zoeken naar zingeving, waarde en diepgang zijn welkom.
+    Graag help ik mensen op weg om hun dromen en plannen te realiseren of te ondersteunen als er hindernissen en belemmeringen zijn.
+    Mensen die hun leven willen veranderen om een roeping of droom te volgen, of zoeken naar zingeving, waarde en diepgang zijn welkom.
     Levenservaring vanuit christelijk perspectief en professie gebruik ik om jou te helpen op zoek te gaan naar de mogelijkheden.  
   </p>
   
   <p>  
-    In de samenleving gaan de veranderingen soms heel snel en voorde het weet heb je voor je gevoel de boot gemist. Soms valt het niet mee om weer een nieuw perspectief te vinden bij een verlies van geliefde of een baan, ook een verhuizing of een nieuwe levensfase kan veel problemen geven, zowel persoonlijk als in de relatie met de ander.
-    Mensen die zich kwetsbaar voelen of in een kwetsbare situatie zitten kunnen bij mij terecht 
+    In de samenleving gaan de veranderingen soms heel snel. Voor je het weet heb je voor je gevoel de boot gemist. Soms valt het niet mee om weer een nieuw perspectief te vinden bij een verlies van een geliefde of een baan, ook een verhuizing of een nieuwe levensfase kan veel problemen geven, zowel persoonlijk als in de relatie met de ander.
+    Mensen die zich kwetsbaar voelen of in een kwetsbare situatie zitten kunnen bij mij terecht. 
     Mensen die persoonlijk of professioneel vastgelopen zijn en de knoop in hun leven willen ontwarren zodat ze verder kunnen wil ik graag helpen.
   </p>
 
