removed (base)url references from index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <main class="home">
 
-  <img class="photo" src="assets/img/photo_kees.jpg" alt="Kees Neven" >
+  <img class="photo" src="/assets/img/photo_kees.jpg" alt="Kees Neven" >
 
   <p>
     Hallo, mijn naam is Kees Neven en mijn missie is mensen op weg te helpen naar hun toekomst.
@@ -93,7 +93,7 @@ layout: default
             Een advies om op de juiste manier om te gaan met onomkeerbare zaken zoals een ingrijpend verlies is ook een vorm van adviseren.
           </p>
           <p>
-            <a href={{ "/diensten/advies/" | prepend: site.url }}>Meer informatie over advies</a>
+            <a href={{ "/diensten/advies/" }}>Meer informatie over advies</a>
           </p>
         </div>
       </div>
@@ -114,7 +114,7 @@ layout: default
           </p>
 
           <p>
-            <a href={{ "/diensten/coaching/" | prepend: site.url }}>Meer informatie over coaching</a>
+            <a href={{ "/diensten/coaching/" }}>Meer informatie over coaching</a>
           </p>
         </div>
       </div>
@@ -144,7 +144,7 @@ layout: default
             Trainingen kunnen over allerlei onderwerpen gaan en zowel individueel als in groepsverband gegeven worden. Het kan persoonlijk of teamgericht zijn. Niets gaat vanzelf, maar bijna alles is te leren.
           </p>
           <p>
-            <a href={{ "/diensten/training/" | prepend: site.url }}>Meer over training</a>
+            <a href={{ "/diensten/training/" }}>Meer over training</a>
             </p>
         </div>
       </div>
@@ -164,7 +164,7 @@ layout: default
           </p>
 
           <p>
-            <a href={{ "/diensten/spreken/" | prepend: site.url }}>Meer over spreken</a>
+            <a href={{ "/diensten/spreken/" }}>Meer over spreken</a>
           </p>
         </div>
       </div>
@@ -188,7 +188,7 @@ layout: default
               Het heeft wel de voorkeur om de coach een keer in levende lijve te ontmoeten om het coachen via Skype effectiever te maken
             </p>
           <p>
-            <a href={{ "/diensten/e-coaching" | prepend: site.url }}>Lees meer over coaching</a>
+            <a href={{ "/diensten/e-coaching" }}>Lees meer over coaching</a>
           </p>
         </div>
       </div>
