--- a/index.html
+++ b/index.html
@@ -31,43 +31,16 @@ layout: default
 
   <div class="buttonswrapper">
     <div class="circle-wrapper">
-      <div class="col">
-        <div class="circle-1 circle" id="advice">
-          <h2>Adviseren</h2>
-          <p>Goede raad helpt om te kiezen</p>
-        </div>
-      </div>
-      <div class="col">
-        <div class="circle-2 circle" id="coaching">
-          <h2>Coachen</h2>
-          <p>Van hier naar daar</p>
-        </div>
-      </div>
-      <div class="col">
-        <a href="/diensten/"></a>
-          <div class="circle-3 circle" id="counseling">
-            <h2>Counselen</h2>
-            <p>De weg naar herstel</p>
+
+      {% for dienst in site.data.diensten %}
+        <div class="col">
+          <div class="circle circle-{{ forloop.index}}" id="{{ dienst.name | downcase }}">
+            <h2>{{ dienst.name }}</h2>
+            <p>{{ dienst.slug }}</p>
           </div>
-      </div>
-      <div class="col">
-        <div class="circle-4 circle" id="training">
-          <h2>Trainen</h2>
-          <p>De weg van verandering</p>
         </div>
-      </div>
-      <div class="col">
-        <div class="circle-5 circle" id="spreken">
-          <h2>Spreken</h2>
-          <p>Overdracht voor groei</p>
-        </div>
-      </div>
-      <div class="col">
-        <div class="circle-6 circle" id="mensbeeld">
-          <h2>E-Coaching</h2>
-          <p>(In ontwikkeling)</p>
-        </div>
-      </div>
+      {% endfor %}
+
     </div>
     <div class="overlay">
       <div class="x">
@@ -77,121 +50,16 @@ layout: default
           
         </svg>
       </div>
-      <div class="block1 textblock" id="advice">
-        <div class="textwrapper">
-          <h1>Adviseren</h1>
-          <p>
-            De goede raad van een adviseur helpt jou om het juiste pad te kiezen.
-            Een droom, missie of opdracht verwezenlijken kan vaak op verschillende manieren.
-            Een doel kan vaak via verschillende routes bereikt worden. 
-            Een verandering kan op meerdere manieren in beweging gezet worden.
-            Een probleem kan vaak op verschillende manieren opgelost worden.
-          </p>
 
-          <p>
-            Een goed advies leidt naar een succesvol plan met meer kans van slagen.
-            Een advies om op de juiste manier om te gaan met onomkeerbare zaken zoals een ingrijpend verlies is ook een vorm van adviseren.
-          </p>
-          <p>
-            <a href={{ "/diensten/advies/" }}>Meer informatie over advies</a>
-          </p>
+      {% for dienst in site.data.diensten %}
+        <div class="block{{ forloop.index }} textblock" id="{{ dienst.name | downcase }}">
+          <div class="textwrapper">
+            <h1>{{ dienst.name }}</h1>
+            {{ dienst.description }}
+            <p><a href="{{ dienst.link }}">Meer informatie over {{ dienst.name | downcase }}</a></p>
+          </div>
         </div>
-      </div>
-      <div class="block2 textblock" id="coaching">
-        <div class="textwrapper">
-          <h1>Coachen</h1>
-          <p>
-            <strong>Een goede coacht helpt jou om van de plaats waar je nu bent te komen op de plaats waar je wilt zijn.</strong>
-          </p> 
-
-          <p>
-            Coaching is motivatie op gang brengen om te veranderen en jou te helpen om te komen je wil zijn. Dit kan een ideaal, een droom, doel of bestemming zijn.
-            Samen sta je sterken twee weten meer dan een. Iedereen heeft bevestiging en aanmoedig nodig en dit geldt zeker als je iets wilt bereiken of veranderen. Dit zien we in de topsport en dat geld ook bij het bereiken van andere doelen. We hebben als mens iemand nodig die ons zelf laat ontdekken waar we goed in zijn, wat we goed kunnen en wat we belangrijk vinden.
-          </p>
-
-          <p>
-            Soms is coaching ook nodig om moeilijkheden te overwinnen. De problemen waar we mee te maken krijgen worden complexer van aard in de huidige tijd. Een goede coach helpt je optimaal om goed door de problemen heen te komen of om een goede weg te vinden om er mee om te gaan.
-          </p>
-
-          <p>
-            <a href={{ "/diensten/coaching/" }}>Meer informatie over coaching</a>
-          </p>
-        </div>
-      </div>
-      <div class="block3 textblock" id="counseling">
-        <div class="textwrapper">
-          <h1>Counselen</h1>
-          <p>
-            <strong>Een goede counselor helpt je om jezelf weer terug te vinden bij ingrijpende gebeurtenissen.</strong>
-          </p>
-          <p>
-            Het kan zomaar gebeuren dat je in de knoop raakt met jezelf, met een ander of een Ander. Het kan zijn dat je beschadigd bent geraakt, mentaal of geestelijk. Belangrijke levensgebeurtenissen als bijvoorbeeld geboorten of sterfgevallen, trouwen of scheiden, ander werk of verhuizen, ziekte of werkeloosheid kunnen je danig uit je evenwicht brengen.
-            Zoals de coach kan helpen om de knoop te ontwarren,  zo kan de counselor helpen om zelf tot herstel te komen. Herstelprocessen kunnen kort zijn maar ook lang duren, afhankelijk hoe de verstoringen of beschadigingen zijn ontstaan en welke impact ze hebben gehad. De counselor helpt om tot herstel en genezing te komen of om te aanvaarden wat onveranderbaar is.
-          </p>
-        </div>
-      </div>
-
-      <div class="block4 textblock" id="training">
-        <div class="textwrapper">
-          <h1>Trainen</h1>
-          <p>
-            <strong>Een goede trainer leert jou hoe jij kunt veranderen</strong>
-          </p>
-          <p>
-            Als je iets wilt bereiken heb je daar kennis, ervaring en skills voor nodig. Trainingen kunnen jou nieuwe inzichten geven en je nieuwe houdingen en vaardigheden leren gebruiken en toe te passen.
-          </p>
-          <p>
-            Trainingen kunnen over allerlei onderwerpen gaan en zowel individueel als in groepsverband gegeven worden. Het kan persoonlijk of teamgericht zijn. Niets gaat vanzelf, maar bijna alles is te leren.
-          </p>
-          <p>
-            <a href={{ "/diensten/training/" }}>Meer over training</a>
-            </p>
-        </div>
-      </div>
-
-      <div class="block5 textblock" id="spreken">
-        <div class="textwrapper">
-          <h1>Spreken</h1>
-          <p>
-            <strong>Een goede spreker neemt zijn luisteraars mee naar een nieuw gebied.</strong>
-          </p>
-          <p>
-            De oudste vorm van communiceren en informatieoverdracht is waarschijnlijk spreken. Een spreker kan een groep in een keer informatie geven, kennis overdragen of onderhouden.
-          </p>
-
-          <p>
-            Een spreker voor een groep kan het doel hebben om je motiveren om iets van waarde te koesteren of juist tot verandering te brengen. Hij kan ook nieuwe inzichten en kennis overbrengen en uitleggen die bruikbaar is voor deze groep. Een spreker kan de groep helpen om te groeien en te ontwikkelen.
-          </p>
-
-          <p>
-            <a href={{ "/diensten/spreken/" }}>Meer over spreken</a>
-          </p>
-        </div>
-      </div>
-      <div class="block6 textblock" id="mensbeeld">
-        <div class="textwrapper">
-          <h1>E-Coaching</h1>
-            <p>
-              <strong>Een goede coach helpt jou om van de plaats waar je nu bent te komen op de plaats waar je wilt zijn.</strong> 
-            </p>
-
-            <p>
-              <strong>Een E-Coach doet dit op afstand en maakt gebruik van de elektronische digitale mogelijkheden van deze tijd.</strong>
-            </p>
-
-            <p>
-              E coachen via Email of Skype is een alternatief als afstand een obstakel, tijd een beperkende factor en agenda ruimte een belemmering is.
-              Een persoonlijke ontmoeting met de coach heeft altijd voorkeur en E-Coachen is een goed alternatief en ook geschikt voor de meeste coach onderwerpen.
-            </p>
-            
-            <p>
-              Het heeft wel de voorkeur om de coach een keer in levende lijve te ontmoeten om het coachen via Skype effectiever te maken
-            </p>
-          <p>
-            <a href={{ "/diensten/e-coaching" }}>Lees meer over coaching</a>
-          </p>
-        </div>
-      </div>
+      {% endfor %}
     </div>
   </div>
 </main>
