--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ layout: default
   <p>  
     In de samenleving gaan de veranderingen soms heel snel. Voor je het weet heb je voor je gevoel de boot gemist. Soms valt het niet mee om weer een nieuw perspectief te vinden bij een verlies van een geliefde of een baan, ook een verhuizing of een nieuwe levensfase kan veel problemen geven, zowel persoonlijk als in de relatie met de ander.
     Mensen die zich kwetsbaar voelen of in een kwetsbare situatie zitten kunnen bij mij terecht. 
-    Mensen die persoonlijk of professioneel vastgelopen zijn en de knoop in hun leven willen ontwarren zodat ze verder kunnen wil ik graag helpen.
+    Mensen die persoonlijk of professioneel vastgelopen zijn en de knoop in hun leven willen ontwarren, zodat ze verder kunnen, wil ik graag helpen.
   </p>
 
   <p>
