made it pretty! added styling

--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 ---
 layout: default
+title: Kees Neven Ontwikkelt Toekomst - KNOT
+img: /assets/img/photo_featured2.jpg
 ---
 
 <main class="home">
-
+  <div class="header">
+    <h1><strong>K</strong>ees<br> <strong>N</strong>even<br> <strong>O</strong>ntwikkelt<br> <strong>T</strong>oekomst</h1>
+  </div>
   <img class="photo" src="/assets/img/photo_kees.jpg" alt="Kees Neven" >
 
   <p>
