--- a/contact.html
+++ b/contact.html
@@ -4,21 +4,23 @@ title: Contact
 permalink: /contact/
 ---
 
-<form class="contact" id="contact-form" action="//forms.brace.io/you@email.com">
+<form class="contact" id="contact-form" action="//formspree.io/you@email.com" method="POST">
 	<div>
-	    <input type="text" name="name" placeholder="Naam">
+	    <input form="contact-form" type="text" name="name" placeholder="Naam" required>
 	</div>
 
 	<div>
-		<input type="email" name="_replyto" placeholder="Mailadres">
+		<input form="contact-form" type="email" name="_replyto" placeholder="Mailadres" required>
 	</div>
 
 	<div>
-		<textarea name="message" placeholder="Uw bericht"></textarea>
+		<textarea form="contact-form" name="message" placeholder="Uw vraag"></textarea>
 	</div>
 
 	<div>
+		<input type="text" name="_gotcha" style="display:none">
 	    <input type="submit" value="Verstuur">
+
 	</div>
 </form>
 
