changed adres contact form gets send to

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@ title: Contact
 permalink: /contact/
 ---
 
-<form class="contact" id="contact-form" action="//formspree.io/you@email.com" method="POST">
+<form class="contact" id="contact-form" action="//formspree.io/info@knot.consulting" method="POST">
 	<div>
 	    <input form="contact-form" type="text" name="name" placeholder="Naam" required>
 	</div>
