added meta tags and descriptions for pages & site

--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 layout: page
 title: Contact
 permalink: /contact/
+img-path: /assets/img/photo_featured2.jpg
 ---
 
 <form class="contact" id="contact-form" action="//formspree.io/info@knot.consulting" method="POST">
