updates text on homepage

--- a/index.html
+++ b/index.html
@@ -15,23 +15,14 @@ img: /assets/img/photo_featured2.jpg
   </p>
 
   <p>
-    Mijn overtuiging is dat mensen gemaakt zijn om te groeien en te leren. 
-    Zij kunnen een leven lang professioneel en persoonlijk ontwikkeling als zij dit willen. 
-    Graag help ik mensen op weg om hun dromen en plannen te realiseren of te ondersteunen als er hindernissen en belemmeringen zijn.
-    Mensen die hun leven willen veranderen om een roeping of droom te volgen, of zoeken naar zingeving, waarde en diepgang zijn welkom.
-    Levenservaring vanuit christelijk perspectief en professie gebruik ik om jou te helpen op zoek te gaan naar de mogelijkheden.  
+    Mijn overtuiging is dat de mens is geschapen met het vermogen om levenslang te groeien in ontwikkeling. Graag help ik mensen op weg om hun dromen, roeping of plannen te realiseren of te ondersteunen als er hindernissen en belemmeringen zijn. Samen kunnen we zoeken naar zingeving, waarden en diepgang om de toekomst vorm te geven. Levenservaring vanuit christelijk perspectief en professie gebruik ik om jou te helpen op zoek te gaan naar de mogelijkheden.
   </p>
-  
-  <p>  
-    In de samenleving gaan de veranderingen soms heel snel. Voor je het weet heb je voor je gevoel de boot gemist. Soms valt het niet mee om weer een nieuw perspectief te vinden bij een verlies van een geliefde of een baan, ook een verhuizing of een nieuwe levensfase kan veel problemen geven, zowel persoonlijk als in de relatie met de ander.
-    Mensen die zich kwetsbaar voelen of in een kwetsbare situatie zitten kunnen bij mij terecht. 
-    Mensen die persoonlijk of professioneel vastgelopen zijn en de knoop in hun leven willen ontwarren, zodat ze verder kunnen, wil ik graag helpen.
-  </p>
-
   <p>
-    Ik werk vanuit professioneel kader met een geïntegreerde visie waarin zingeving, relaties, levensbeschouwing, professionaliteit en persoonlijkheid een plaats krijgen. Ik begeleid mensen graag persoonlijk in hun ontwikkeling naar hun droom, bestemming of doel, maar ik hou ook van het werken met groepen. Dit alles kan door advisering, counseling, coaching of training.
+    De veranderingen in de samenleving volgen elkaar snel op. Zo snel dat je zomaar het gevoel kan hebben de boot te missen. Een nieuw perspectief vinden na een verlies van een geliefde of een baan valt niet altijd mee. Ook na een verhuizing, bij een nieuwe levensfase of ingrijpende verandering kan het lastig zijn om de juiste balans weer terug te vinden. Mensen die zich kwetsbaar voelen of in een kwetsbare situatie zitten kunnen bij mij terecht. Als je persoonlijk of professioneel vastloopt en de knoop in je leven wilt ontwarren help ik je daar graag bij tot je weer zelf verder kunt.
   </p>
-
+  <p>
+    Ik werk vanuit professioneel kader met een geïntegreerzde visie waarin zingeving, relaties, levensbeschouwing, professionaliteit en persoonlijkheid een plaats krijgen. Ik begeleid mensen graag persoonlijk in hun ontwikkeling naar hun droom, bestemming of doel, maar ik hou ook van het werken met groepen. Dit alles kan door advisering, counseling, coaching of training.
+  </p>
 
   <div class="buttonswrapper">
     <div class="circle-wrapper">
