--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ img: /assets/img/photo_featured2.jpg
     De veranderingen in de samenleving volgen elkaar snel op. Zo snel dat je zomaar het gevoel kan hebben de boot te missen. Een nieuw perspectief vinden na een verlies van een geliefde of een baan valt niet altijd mee. Ook na een verhuizing, bij een nieuwe levensfase of ingrijpende verandering kan het lastig zijn om de juiste balans weer terug te vinden. Mensen die zich kwetsbaar voelen of in een kwetsbare situatie zitten kunnen bij mij terecht. Als je persoonlijk of professioneel vastloopt en de knoop in je leven wilt ontwarren help ik je daar graag bij tot je weer zelf verder kunt.
   </p>
   <p>
-    Ik werk vanuit professioneel kader met een geïntegreerzde visie waarin zingeving, relaties, levensbeschouwing, professionaliteit en persoonlijkheid een plaats krijgen. Ik begeleid mensen graag persoonlijk in hun ontwikkeling naar hun droom, bestemming of doel, maar ik hou ook van het werken met groepen. Dit alles kan door advisering, counseling, coaching of training.
+    Ik werk vanuit professioneel kader met een geïntegreerde visie waarin zingeving, relaties, levensbeschouwing, professionaliteit en persoonlijkheid een plaats krijgen. Ik begeleid mensen graag persoonlijk in hun ontwikkeling naar hun droom, bestemming of doel, maar ik hou ook van het werken met groepen. Dit alles kan door advisering, counseling, coaching of training.
   </p>
 
   <div class="buttonswrapper">
