--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@ permalink: /contact/
 img-path: /assets/img/photo_featured2.jpg
 ---
 
-<form class="contact" id="contact-form" action="//formspree.io/info@knot.consulting" method="POST">
+<form class="contact" id="contact-form" action="https://formspree.io/info@knot.consulting" method="POST">
 	<div>
 	    <input form="contact-form" type="text" name="name" placeholder="Naam" required>
 	</div>
